syntax = "proto3";
option java_multiple_files = true;
package kz.ya.wallet;

import "google/protobuf/any.proto";

enum Currency {
    EUR = 0;
    USD = 1;
    GBP = 2;
}

message TransactionRequest {
    int32 userId = 1;
    double amount = 2;
    Currency currency = 3;
}

message TransactionResponse {
    int32 code = 1;
    string message = 2;
//    google.rpc.Code status = 3;
    repeated google.protobuf.Any details = 3;
}

message BalanceRequest {
    int32 userId = 1;
}

message BalanceResponse {
    map<string, double> balanceByCurrency = 1;
}

service WalletService {
    rpc deposit(TransactionRequest) returns (TransactionResponse);
    rpc withdraw(TransactionRequest) returns (TransactionResponse);
    rpc balance(BalanceRequest) returns (BalanceResponse);
}